Bug 261388 - [iOS] Mail compose loses focus after long pressing and inserting text using  Pencil
Summary: [iOS] Mail compose loses focus after long pressing and inserting text using ...
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: HTML Editing (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Wenson Hsieh
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-09-10 15:25 PDT by Wenson Hsieh
Modified: 2023-09-10 22:48 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Wenson Hsieh 2023-09-10 15:25:57 PDT
rdar://114253457
Comment 1 Wenson Hsieh 2023-09-10 16:07:36 PDT
Pull request: https://github.com/WebKit/WebKit/pull/17638
Comment 2 EWS 2023-09-10 22:48:58 PDT
Committed 267854@main (e3415c365a3f): <https://commits.webkit.org/267854@main>

Reviewed commits have been landed. Closing PR #17638 and removing active labels.