Source/WebCore/editing/Editor.cpp
@@ -3532,17 +3532,16 @@ void Editor::removeTextPlaceholder(TextPlaceholderElement& placeholder)
 {
     ASSERT(placeholder.isConnected());
 
-    Ref<Document> document { this->document() };
+    Ref document { this->document() };
 
     // Save off state so that we can set the text insertion position to just before the placeholder element after removal.
     RefPtr savedRootEditableElement { placeholder.rootEditableElement() };
-    auto savedPositionBeforePlaceholder = positionBeforeNode(&placeholder).parentAnchoredEquivalent();
+    auto savedPositionBeforePlaceholder = positionInParentBeforeNode(&placeholder);
 
     // FIXME: Save the current selection if it has changed since the placeholder was inserted
     // and restore it after text insertion.
     placeholder.remove();
-
-    // To match the Legacy WebKit implementation, set the text insertion point to be before where the placeholder use to be.
+    // To match the Legacy WebKit implementation, set the text insertion point to be before where the placeholder used to be.
     if (m_document.selection().isFocusedAndActive() && document->focusedElement() == savedRootEditableElement)
         m_document.selection().setSelection(VisibleSelection { savedPositionBeforePlaceholder }, FrameSelection::defaultSetSelectionOptions(UserTriggered::Yes));
 }
